--- a/budget_bridge/src/main/resources/groupid/primary.fxml
+++ b/budget_bridge/src/main/resources/groupid/primary.fxml
@@ -56,6 +56,7 @@
                   <Label text="Monthly Expenses" styleClass="metric-label"/>
                   <!-- Expense items will be populated by controller -->
                </VBox>
+               
             </HBox>
          </VBox>
          
@@ -70,7 +71,8 @@
          <BorderPane.margin>
             <Insets top="20" right="20" bottom="20" left="20"/>
          </BorderPane.margin>
-         
+         <!-- Expense tracker  -->
+         <VBox fx:id="expenseProgressVBox" spacing="15" styleClass="expense-progress-section"/>
          <VBox spacing="15" styleClass="missions-overview-card" VBox.vgrow="ALWAYS">
             <Label text="Active Missions" styleClass="card-heading"/>
                <ListView fx:id="missionList" styleClass="modern-list"/>
@@ -101,8 +103,8 @@
                prefWidth="500" prefHeight="500"
                legendVisible="false"/>
             </VBox>
+            
          </VBox>
-         
       </VBox>
       <padding>
          <Insets bottom="25" left="25" right="25" top="25"/>
