--- a/budget_bridge/src/main/resources/groupid/budget_setup.fxml
+++ b/budget_bridge/src/main/resources/groupid/budget_setup.fxml
@@ -84,23 +84,8 @@
                             </HBox>
                             
                             <HBox spacing="15" alignment="CENTER_LEFT">
-                                <Label text="Groceries:" styleClass="setup-label" prefWidth="140"/>
-                                <TextField fx:id="tfGroceries" styleClass="setup-input" HBox.hgrow="ALWAYS"/>
-                            </HBox>
-                            
-                            <HBox spacing="15" alignment="CENTER_LEFT">
-                                <Label text="Dining Out:" styleClass="setup-label" prefWidth="140"/>
-                                <TextField fx:id="tfDining" styleClass="setup-input" HBox.hgrow="ALWAYS"/>
-                            </HBox>
-                            
-                            <HBox spacing="15" alignment="CENTER_LEFT">
-                                <Label text="Fun Money:" styleClass="setup-label" prefWidth="140"/>
-                                <TextField fx:id="tfFun" styleClass="setup-input" HBox.hgrow="ALWAYS"/>
-                            </HBox>
-                            
-                            <HBox spacing="15" alignment="CENTER_LEFT">
-                                <Label text="Other:" styleClass="setup-label" prefWidth="140"/>
-                                <TextField fx:id="tfOtherExpense" styleClass="setup-input" HBox.hgrow="ALWAYS"/>
+                                <Label text="Other Debt:" styleClass="setup-label" prefWidth="140"/>
+                                <TextField fx:id="tfDebt" styleClass="setup-input" HBox.hgrow="ALWAYS"/>
                             </HBox>
                         </VBox>
                     </VBox>
